[package]
name = "net-munge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
tch = { version = "0.10.3", optional = true }
tensorflow = { version = "0.20.0", optional = true }
