[package]
name = "net-munge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["tch"]

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.1.8", features = ["derive"] }
eyre = "0.6.8"
tch = { version = "0.10.3", optional = true }
tensorflow = { version = "0.20.0", optional = true }
